Fix header content grid space and partners wrap

--- a/src/sass/components/_partners.scss
+++ b/src/sass/components/_partners.scss
@@ -2,6 +2,7 @@
   &__images {
     margin-top: 0.8rem;
     display: flex;
+    flex-wrap: wrap;
     gap: 3.2rem;
   }
 }
